2011-09-19  Murray Cumming  <murrayc@murrayc-desktop>

	reviewed by: <delete if not using a buddy>

	* glom/utility_widgets/canvas/canvas_image_movable.cc:
	* glom/utility_widgets/imageglom.cc:

2011-09-13  Murray Cumming  <murrayc@murrayc.com>>

	Remove the Add Related Table feature.

	* glom/application.cc: init_menus():
	* glom/frame_glom.[h|cc]: on_menu_Tables_AddRelatedTable(): Remove the 
	Tables/Add Related Table menu item (and feature) because, though it is 
	useful, it requires explanation and is probably confusing to new users.
	
	Of course you can still add tables and then a relationship to them manually.

1.19.10:

2011-09-12  Murray Cumming  <murrayc@murrayc.com>

	UsesRelationship: Added get_relationship_display_name().

	* glom/mode_design/layout/dialog_layout_calendar_related.cc: update_ui():
	* glom/mode_design/layout/dialog_layout_list_related.cc: update_ui():
	Move some code into
	* glom/libglom/data_structure/layout/usesrelationship.[h|cc]:
	get_relationship_display_name() to avoid repetition.

2011-09-12  Murray Cumming  <murrayc@murrayc.com>

	Related Records: Correct automatic navigation to related relationships.

	* glom/base_db.[h|cc]: get_portal_navigation_relationship_automatic():
  Remove the unused (well, should have been unused) navigation_main output
  parameter.
  Document the method so we know what the parameters and result really mean.
  In particular, a empty result means that the portal's regular relationship
  should just be used.
	* glom/mode_data/box_data_portal.[h|cc]: get_suitable_table_to_view_details():
	Document its parameters so we know what table the relationship belongs to, 
	if any relationship is even needed.
	Use get_navigation_relationship_specific() if specified and correct the 
	logic so that the correct table is always used.
	get_suitable_record_to_view_details(): Document this too.
	* glom/mode_design/layout/dialog_layout_calendar_related.cc: update_ui():